# faithflow

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  load_songs.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
songs/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  135.json  (+640 more)
src/: app.py
src/infrastructure/: daemon.py  load_songs.py  settings.py  skew.py
src/infrastructure/views/: events.py  index.py  sermons.py  songs.py  view.py
src/modules/: facade.py
src/modules/sermons/: sermon.py  sermons_fetching_facade.py  youtube_syncing_facade.py
src/modules/songs/: songs_fetching_facade.py
static/: main.css  manifest.json  scroll.js  search.js  service-worker.js
templates/: sermon.html.jinja  sermons.html.jinja  song.html.jinja  songs.html.jinja
test-results/: junit.xml
