[project]
name = "faithflow"
version = "0.1.0"
description = "Church website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "numpy>=2.3.2",
    "orjson>=3.11.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo[srv]>=4.13.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "sentry-sdk>=2.33.0",
    "structlog>=25.4.0",
]
